force-app/main/default/objects/Sensor_Reading__c/fields/Battery_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Battery_Voltage__c</fullName>
    <label>Battery Voltage</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>LiPo battery voltage in millivolts from SIM7000A</description>
    <inlineHelpText>Battery voltage in mV (3700-4200 typical for LiPo)</inlineHelpText>
</CustomField>