force-app/main/default/objects/Sensor_Reading__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <label>Connection Type</label>
    <type>Text</type>
    <length>20</length>
    <description>How the reading was transmitted to Salesforce</description>
    <inlineHelpText>Phone = via BLE to phone, WiFi = direct WiFi, Cellular = via LTE modem</inlineHelpText>
</CustomField>