force-app/main/default/objects/Sensor_Reading__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Text</type>
    <length>20</length>
    <description>Type of button press that triggered this reading (Single or Double)</description>
    <inlineHelpText>Single = single tap, Double = double tap</inlineHelpText>
</CustomField>