force-app/main/default/objects/Sensor_Reading__c/fields/GPS_Altitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Altitude__c</fullName>
    <label>GPS Altitude</label>
    <type>Number</type>
    <precision>7</precision>
    <scale>2</scale>
    <description>Altitude in meters from GPS</description>
    <inlineHelpText>Altitude above sea level in meters</inlineHelpText>
</CustomField>