force-app/main/default/objects/Sensor_Reading__c/fields/GPS_Satellites__c.field-meta.xml
<CustomField>
    <fullName>GPS_Satellites__c</fullName>
    <label>GPS Satellites</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Number of GPS satellites in view</description>
    <inlineHelpText>More satellites = better GPS accuracy (4+ needed for fix)</inlineHelpText>
</CustomField>