force-app/main/default/objects/Sensor_Reading__c/fields/GPS_Speed__c.field-meta.xml
<CustomField>
    <fullName>GPS_Speed__c</fullName>
    <label>GPS Speed</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <description>Speed in km/h from GPS</description>
    <inlineHelpText>Ground speed in kilometers per hour</inlineHelpText>
</CustomField>