force-app/main/default/objects/Sensor_Reading__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>6</scale>
    <description>GPS latitude coordinate from the device</description>
    <inlineHelpText>GPS latitude in decimal degrees (e.g., 37.774929)</inlineHelpText>
</CustomField>