force-app/main/default/objects/Sensor_Reading__c/fields/Local_IP__c.field-meta.xml
<CustomField>
    <fullName>Local_IP__c</fullName>
    <label>Local IP</label>
    <type>Text</type>
    <length>45</length>
    <description>Local network IP address of the device</description>
    <inlineHelpText>The device IP on its local network (e.g., 192.168.x.x)</inlineHelpText>
</CustomField>