force-app/main/default/objects/Sensor_Reading__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>6</scale>
    <description>GPS longitude coordinate from the device</description>
    <inlineHelpText>GPS longitude in decimal degrees (e.g., -122.419418)</inlineHelpText>
</CustomField>