force-app/main/default/objects/Sensor_Reading__c/fields/Network_Operator__c.field-meta.xml
<CustomField>
    <fullName>Network_Operator__c</fullName>
    <label>Network Operator</label>
    <type>Text</type>
    <length>50</length>
    <description>Cellular network operator name</description>
    <inlineHelpText>Carrier name (e.g., T-Mobile, AT&amp;T, Hologram)</inlineHelpText>
</CustomField>