force-app/main/default/objects/Sensor_Reading__c/fields/Networks__c.field-meta.xml
<CustomField>
    <fullName>Networks__c</fullName>
    <label>Networks</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON array of WiFi networks detected during a scan. Contains SSID, signal strength (RSSI), channel, and encryption type.</description>
    <inlineHelpText>WiFi networks found during triple-tap scan</inlineHelpText>
</CustomField>