force-app/main/default/objects/Sensor_Reading__c/fields/Public_IP__c.field-meta.xml
<CustomField>
    <fullName>Public_IP__c</fullName>
    <label>Public IP</label>
    <type>Text</type>
    <length>45</length>
    <description>Public IP address the request came from</description>
    <inlineHelpText>The external IP address visible to Salesforce</inlineHelpText>
</CustomField>