force-app/main/default/objects/Sensor_Reading__c/fields/Signal_Quality__c.field-meta.xml
<CustomField>
    <fullName>Signal_Quality__c</fullName>
    <label>Signal Quality</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Cellular signal quality (CSQ) from SIM7000A</description>
    <inlineHelpText>CSQ value: 0-9 marginal, 10-14 OK, 15-19 good, 20-31 excellent, 99 unknown</inlineHelpText>
</CustomField>