force-app/main/default/objects/Sensor_Reading__c/listViews/All_Readings.listView-meta.xml
<ListView>
    <fullName>All_Readings</fullName>
    <columns>NAME</columns>
    <columns>Device_Id__c</columns>
    <columns>Function__c</columns>
    <columns>Reading_Timestamp__c</columns>
    <columns>Connection_Type__c</columns>
    <columns>Temperature__c</columns>
    <columns>Humidity__c</columns>
    <columns>Battery_Voltage__c</columns>
    <columns>Signal_Quality__c</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
    <columns>Local_IP__c</columns>
    <columns>Public_IP__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Readings</label>
</ListView>